--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
-
 body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
@@ -63,14 +62,15 @@ body {
   /*
   display: flex;
   justify-content: center;
-  align-items: center; */
+  align-items: center; 
   border: 0px solid blue;
   border-radius: 20%;
   background-color: yellow;
   height: 250px;
   width: 250px;
   position: relative;
-  z-index: -1;
+  z-index: 1;
+  */
 } 
  h1 {
   color:white;
