--- a/styles.css
+++ b/styles.css
@@ -5,48 +5,9 @@ body {
     margin: 0;
     padding: 20px;
     background-color: #FFB84C;
-  }
+}
 
-  #name1 {
-    font-size: 24px;
-    margin-bottom: 10px;
-    color: blue;
-    /*background-color: yellow; */
-    width: 150px;
-    height: 120px;
-    
-  }
-
-  h2 {
-    font-size: 18px;
-    margin-bottom: 10px;
-    color: #F266AB;
-  }
-
-  h3 {
-    color:#F266AB;
-  }
-
-  p {
-    margin: 0;
-    margin-bottom: 10px;
-    color:#A459D1;
-    
-  }
-
-  .section {
-    margin-bottom: 20px;
-  }
-
-  .foto {
-    display: flex;
-    flex-direction: row;
-    justify-content:space-around;
-    /* background-color: aqua; */
-    
-  }
-
-  .name {
+.name {
     display: flex;
     flex-direction: row;
     justify-content:flex-end;
@@ -54,22 +15,127 @@ body {
     height: 250px;        
   }
 
-#fotoHenry {
-  /* border-style: 20px,solid,red; */
+.foto {
+    display: flex;
+    flex-direction: row;
+    justify-content:space-around;
+    /* background-color: aqua; */
+    align-items: center;
+  } 
+
+  .foto img {
+    /*
+    display: flex;
+    justify-content: center;
+    align-items: center; */
+    border: 0px solid blue;
+    border-radius: 20%;
+    background-color: yellow;
+    height: 250px;
+    width: 250px;
+  } 
+
+.main-nav {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    list-style: none;
+    padding: 0px;
+    
 } 
 
-img {
-  /*
+.main-nav__item a {
   display: flex;
   justify-content: center;
-  align-items: center; */
-  border: 0px solid blue;
-  border-radius: 20%;
-  background-color: yellow;
-  height: 250px;
-  width: 250px;
+  align-items: center;
+  color: white;
+  text-decoration: none;
+  border-radius: 5px;
+  background-color: #2CD3E1;
+  width: 200px;
+  height: auto;
+  /* 
+  width: 50px;
+  height: 50px;
+  */
+} 
+/*
+li:nth-child(odd){
+  background-color:blue;
+}
+*/
+.main-nav__item a[href="www.google.com"] {
+  color: black;
+}
+
+.main-nav__item a:hover{
+  background-color: #F266AB ;
+}
+/*
+.perfil1 {
+    color:white;
+}
+*/
+.perfil1 p {
+  text-align: justify;
+}
+
+#name1 {
+    font-size: 24px;
+    margin-bottom: 10px;
+    color: blue;
+    /*background-color: yellow; */
+    width: 150px;
+    height: 120px;
+    
+}
+
+h2 {
+    font-size: 18px;
+    margin-bottom: 10px;
+    color: #F266AB;
+ }
+
+h3 {
+    color:#F266AB;
+  }
+
+p {
+    margin: 0;
+    margin-bottom: 10px;
+    color:#A459D1;
+    
+  }
+
+.section {
+    margin-bottom: 20px;
+  }
+
+h2::before {
+  content: "✔ ";
+}
+
+ul li {
+    color:#A459D1;
+  }  
+
+#fotoHenry {
+  /* border-style: 20px,solid,red; */
+
 } 
 
- h1 {
+h1 {
   color:white;
+  margin-top: 51px;
+}
+
+.footer {
+  display: flex;
+  flex-direction: row;
+  justify-content:space-around;
+  align-items: center;
+  background-color:#2CD3E1;
+  width: 100%;
+  height: 60px;
+  border-radius: 40%;
  }
