--- a/assets/css/sass/styles.css
+++ b/assets/css/sass/styles.css
@@ -76,3 +76,13 @@ article {
     color:var(--texto-terciary);
     text-align: justify;
 }
+
+.nav-link {
+    color:var(--links-cuaternary);
+    margin:15px; 
+}
+
+.navbar-brand {
+    color:var(--links-cuaternary);
+    font-size: 2.8rem; 
+}
